create getting basket with food